# SysRecon

./: .gitignore  CLI_EXAMPLES.md  CMakeLists.txt  COMPILATION_GUIDE.md  LICENSE  Makefile  Makefile.linux  PROJECT_STATUS.md  QUICK_START.txt  README.md  STATUS_REPORT.md  USAGE_EXAMPLES.md  build-installer.bat  build-installer.sh  build.bat  build.sh  clean.sh  config.json  installer.nsi  setup-dev.sh
.github/: copilot-instructions.md
cmake/: mingw-w64-x86_64.cmake
docs/: testing-guide.md  user-manual.md
include/: sysrecon.h
include/core/: config.h  engine.h  logger.h  utils.h  whitelist.h
include/modules/accounts/: user_enum.h
include/modules/memory/: memory_analyzer.h
include/modules/network/: network_enum.h
include/modules/processes/: process_enum.h
include/modules/registry/: registry_analyzer.h
include/modules/reporting/: report_generator.h
include/modules/services/: service_enum.h
modules/accounts/: user_enum.cpp
modules/memory/: memory_analyzer.cpp
modules/network/: network_enum.cpp
modules/processes/: process_enum.cpp
modules/registry/: registry_analyzer.cpp
modules/reporting/: report_generator.cpp
modules/services/: service_enum.cpp
src/: main.cpp  modules_placeholder.cpp  modules_placeholder_new.cpp
src/core/: config.cpp  engine.cpp  logger.cpp  utils.cpp
tests/: test_core.cpp
